--- a/food-truck-trackr/package.json
+++ b/food-truck-trackr/package.json
@@ -9,9 +9,11 @@
     "axios": "^0.20.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-redux": "^7.2.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "redux-devtools": "^3.7.0",
     "yup": "^0.29.3"
   },
   "scripts": {
